<resources>
    <string name="app_name">BMI calculator</string>
    <string name="mass">MASS</string>
    <string name="height">HEIGHT</string>
    <string name="bmi" translatable="false">BMI:</string>
    <string name="saveData">Save data</string>
    <string name="countBmi" translatable="false">Count BMI</string>
    <string name="normalBmi">Normal BMI</string>
    <string name="obese">Obese</string>
    <string name="overweight">Overweight</string>
    <string name="underweight">Underweight</string>
    <string name="seriouslyUnderweight">Seriously Underweight</string>
    <string-array name="units">
        <item>kg/m</item>
        <item>lb/in</item>
    </string-array>
    <string name="title_activity_author">Author</string>
    <string name="tvAuthorDescription">My name is Wojciech Okoński and I\u00A0developed this app. Running is my hobby</string>
    <string name="runner">runner</string>
    <string name="share">Share</string>
    <string name="sharingMessage">My BMI is %s. I counted it using app created by Wojtek</string>
    <string name="saved">Saved</string>
    <string name="NaN">not a number</string>
    <string name="inputRange">from %1$.1f to %2$.1f</string>
</resources>